testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment37.errors.txt
mod.js(1,14): error TS2304: Cannot find name 'exports'.
mod.js(1,24): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod.js(3,10): error TS2339: Property 'existy' does not exist on type '{}'.
use.js(1,22): error TS2306: File 'mod.js' is not a module.


==== use.js (1 errors) ====
    const util = require('./mod')
                         ~~~~~~~
!!! error TS2306: File 'mod.js' is not a module.
    function n() {
        util.existy // no error
    }
    util.existy // no error
    
==== mod.js (3 errors) ====
    const util = exports = module.exports = {}
                 ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
                           ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    if (!!false) {
        util.existy = function () { }
             ~~~~~~
!!! error TS2339: Property 'existy' does not exist on type '{}'.
    }
    